src/app/components/header/header.component.scss
:host {
  z-index: 1000;
}

.header {
  .mat-sidenav {
    position: relative;
  }
  .mat-drawer-container {
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: -10;
    visibility: hidden;
  }
}

.header-toolbar {
  background: white;
  // position: fixed;
  // height: 190px;
  width: 100%;
  box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.15);
  // padding: 35px 40px;
  .menu-button {
    cursor: pointer;
  }
}

.project-title {
  margin-bottom: 42px;

  font-family: 'Surogat Black Italic', sans-serif;
  font-style: italic;
  font-weight: 900;
  font-size: 48px;
  line-height: 47px;
  font-style: normal;
  /* identical to box height */

  a {
    display: inline;
    text-decoration: none;
    color: #000000;
  }
}

.title {
  padding: 5px;
  display: flex;
  flex-direction: row;
  align-content: flex-start;
  justify-content: space-around;
}

.about-links {
  margin-bottom: 20px;

  // font-family: 'TyponineSans Pro', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 22px;
  /* identical to box height */
  text-transform: uppercase;
  a {
    display: inline;
    text-decoration: none;
    color: #000000;
  }
}

.logo {
  margin-bottom: 37px;
}

.legend-title {
  font-size: 16px;
  line-height: 22px;
  text-transform: uppercase;
  margin-bottom: 10px;
}

.legend {
  display: flex;

  .legend-item {
    width: 300px;
    display: flex;
    justify-content: center;
    padding: 5px;
    text-transform: uppercase;
  }

  .low {
    background-color: #cbd244;
  }
  .moderate {
    background-color: #ffd53b;
  }
  .high {
    background-color: #ff7b7b;
  }
  .extreme {
    background-color: #d963ff;
  }
}

